# social-todo

./: README.md
backend/: .gitignore  ai-prototype.py  dl_gtasks.py  main.py  pyproject.toml  queue.sh  task_types.py  types.py
frontend/: ambient.d.ts  package.json  pnpm-lock.yaml
frontend/src/lib/: index.ts  posts.ts  store.svelte.ts  types.ts
frontend/src/lib/components/: TumblrFeed.svelte  TumblrPost.svelte
frontend/src/lib/types/: tumblr.ts
frontend/src/routes/posts/: +server.ts
frontend/src/routes/tumblr/: +page.svelte  TumblrFeed.svelte  TumblrPost.svelte
